kubernetes/apps/overseerr/overseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: overseerr
          image: lscr.io/linuxserver/overseerr@sha256:f09999ba45bb463df8ac29adbb26ebaa003092a39b57603c5b59088b7f9abc2d
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5055
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 45
            periodSeconds: 20
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-config-pvc
