kubernetes/apps/overseerr/overseerr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: homelab-local-ca
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - overseerr.local
      secretName: overseerr-local-tls
  rules:
    - host: overseerr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
